--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -10,11 +10,10 @@
 
 .App {
   position: relative;
-  height: 100vh;
 }
 
 .App .header {
-  height: 300px;
+  height: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -162,7 +161,7 @@
 }
 
 .App .map-container {
-  height: calc(100% - 300px);
+  height: 70%;
   background-color: #4f5abc;
 }
 
