--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,9 +9,8 @@ $border-radius: 10px;
 }
 .App {
   position: relative;
-  height: 100vh;
   .header {
-    height: 300px;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -99,7 +98,7 @@ $border-radius: 10px;
     }
   }
   .map-container {
-    height: calc(100% - 300px);
+    height: 70%;
     background-color: #4f5abc;
   }
 }
