--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -182,12 +182,16 @@
         -ms-flex-direction: column;
             flex-direction: column;
     min-width: 65%;
+    gap: 0;
   }
   .App .info-container .box {
     padding: 5px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .App .info-container .box:not(:last-child) {
+    margin-bottom: 10px;
   }
   .App .info-container .box::after {
     display: none;
