--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -63,7 +63,8 @@ $border-radius: 10px;
     background: #fff;
     z-index: 10000;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    top: 20%;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     padding: 20px 0;
@@ -114,7 +115,6 @@ $border-radius: 10px;
       }
     }
     .info-container {
-      margin-top: 80px;
       flex-direction: column;
       min-width: 65%;
       gap: 0;
@@ -122,7 +122,7 @@ $border-radius: 10px;
         padding: 5px;
         align-items: center;
         &:not(:last-child) {
-          margin-bottom: 30px;
+          margin-bottom: 20px;
         }
         &::after {
           display: none;
