changed some styles

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -77,6 +77,7 @@ $border-radius: 10px;
       flex-direction: column;
       justify-content: flex-start;
       padding: 20px;
+      text-align: center;
       p {
         font-size: 14px;
         font-weight: 500;
