--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -136,6 +136,7 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   padding: 20px;
+  text-align: center;
 }
 
 .App .info-container .box p {
